<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.leagueoflegendsgoldtracker.MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/teamAColor"
            android:text="@string/team_A"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/gold_title"
            />
        <TextView
            android:id="@+id/team_a_gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:textSize="48sp"
            android:textColor="@color/teamAColor"
            android:text="@string/gold_text"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/kill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:layout_margin="4dp"
                android:text="@string/kill"
                android:onClick="killButtonA"
                />
            <Button
                android:id="@+id/minion_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:text="@string/minion"
                android:onClick="minionButtonA"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/dragon_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:text="@string/dragon"
                android:onClick="dragonButtonA"
                />
            <Button
                android:id="@+id/baron_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:text="@string/baron"
                android:onClick="baronButtonA"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/ward_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:text="@string/ward"
                android:onClick="wardButtonA"
                />
            <Button
                android:id="@+id/tower_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textColor="@color/teamAColor"
                android:paddingRight="1dp"
                android:paddingLeft="1dp"
                android:text="@string/tower"
                android:onClick="towerButtonA"
                />
        </LinearLayout>
        <ImageView
            android:contentDescription="@string/logo_description_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bbq"
            android:layout_marginBottom="56dp"
            />
    </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="56dp">

        </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/teamBColor"
                android:text="@string/team_B"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/gold_title"
                />
            <TextView
                android:id="@+id/team_b_gold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textSize="48sp"
                android:textColor="@color/teamBColor"
                android:text="@string/gold_text"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/kill_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:layout_margin="4dp"
                    android:text="@string/kill"
                    android:onClick="killButtonB"
                    />
                <Button
                    android:id="@+id/minion_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:text="@string/minion"
                    android:onClick="minionButtonB"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/dragon_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:text="@string/dragon"
                    android:onClick="dragonButtonB"
                    />
                <Button
                    android:id="@+id/baron_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:text="@string/baron"
                    android:onClick="baronButtonB"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/ward_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:text="@string/ward"
                    android:onClick="wardButtonB"
                    />
                <Button
                    android:id="@+id/tower_button_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:textColor="@color/teamBColor"
                    android:paddingRight="1dp"
                    android:paddingLeft="1dp"
                    android:text="@string/tower"
                    android:onClick="towerButtonB"
                    />
            </LinearLayout>
            <ImageView
                android:contentDescription="@string/logo_description_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/skt"
                android:layout_marginBottom="56dp"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:text="@string/reset_button"
        android:onClick="resetButton"
        />
</RelativeLayout>
